css/style.css
.container {
    width: 1080px;
    margin: 0px auto;
    font-size: 1.3rem;
}

.top-banner {
    background-color: #4ea0ff;
    background-image: url('../img/pattern.png');
    height: 70px;
    background-size: 25% ;
    font-family: 'Rubik', sans-serif;
    color: #fff;
    text-shadow: 1px 1px 2px black;
    font-size: 1.5rem;
}

h1 {
    margin-bottom: 0px;
}

#wrote-by {
    color: #808080;
    font-size: 1rem;
}
#wrote-by>span {
    color: #3cb8ec;
}

figure {
    margin-left: 0px;    
    margin-bottom: 0px;    
}

.photo-description{
    font-size: 0.8rem;
}

article {
    margin-top: 20px;
    font-size: 1.3rem;
}

article>span {
    background-color: yellow;
}

ul {
    padding: 20px;
}

td{
    padding: 0px;
}
.items {
    width: 350px;
}

table, tr, td {
    border: none;
    padding: none;
}

.table-description {
    width: 600px;
}

thead>tr {
    background-color: #20a9e5;
    color: white;
}

.row-color {
    background-color: #b1e5f2;
}

h3 {
    color: gray;
}

#first-link{
    height: 250px;
    width: 300px;
    background-image: url(../img/monitor.jpg);
    background-size: auto;
}

#second-link{
    height: 250px;
    width: 300px;
    background-image: url(../img/graph.jpg);
    background-size: auto;
    margin-top: 10px;
}

h4 {
    padding-top: 10px;
    padding-left: 10px;
    color: white;
    margin-top: 0px;
}

